# haskell-book-uv

./: .gitignore  README.markdown  ch10.hs  ch11.hs  ch12-ex.hs  ch12.hs  ch13.hs  haskell-ch6.hs  haskell-ch7.hs  haskell-ch8.hs  haskell-ch9.hs  haskell-cypher.hs  scratch.hs
ch13/: palindrome.hs  person.hs
ch13/hangman/: myhangman.cabal
ch13/hangman/app/: Main.hs
ch13/hangman/ch13/app/: Main.hs
ch13/myhangman/: myhangman.cabal
ch14/: mymod.hs
ch14/addition/: addition.cabal
ch14/addition/app/: Addition.hs  Main.hs
ch14/ex1/: CHANGELOG.md  ex1.cabal
ch14/ex1/app/: Main.hs
ch14/ex2/: CHANGELOG.md  ex2.cabal
ch14/ex2/app/: Main.hs
ch14/morse/: Data.Map  morse.cabal
ch14/morse/app/: Main.hs
ch14/morse/lib/: Morse.hs
ch14/morse/tests/: tests.hs
ch14/myarbitrary/: CHANGELOG.md  myarbitrary.cabal
ch14/myarbitrary/app/: Main.hs
hangman/: CHANGELOG.md
hangman/app/: Main.hs
heic2jpg/: LICENSE  ghcoptions  report.txt  y.cabal
heic2jpg/app/: heic2jpeg.hs
heic2jpg/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
megaparser/: CHANGELOG.md  input.txt  megaparser.cabal  output.c
megaparser/app/: Main.hs
myfirstapp/: myfirstapp.cabal
myfirstapp/app/: Main.hs
myfirstapp/lib/hello/: Hello.hs
ugoparse/: CHANGELOG.md  a.out  input.txt  output.c  ugoparse.cabal
ugoparse/app/: Main.hs
