cabal-version:      2.4
name:               megaparser
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: Porting of Parsec parser and code generator to Megaparsec

-- A longer description of the package.
description: Learning Megaparsec by implementing a parser and C code generator

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
license:            0BSD
author:             Ugo Varetto
maintainer:         ugovaretto@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable megaparser
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.18.0.0
                      , text
                      , parser-combinators
                      , containers
                      , megaparsec
    hs-source-dirs:   app
    default-language: Haskell2010
