cabal-version:      2.4
name:               myhangman
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: Playing Hangman

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            0BSD
license-file:       LICENSE
author:             Ugo Varetto
maintainer:         ugovaretto@gmail.com

-- A copyright notice.
copyright: Copyright (c) Ugo Varetto 2023
category: Game
extra-source-files: CHANGELOG.md

executable myhangman
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.18.0.0,
        random,
        split
    hs-source-dirs:   app
    default-language: Haskell2010
