cabal-version:      2.4
name:               ex1
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            0BSD
license-file:       LICENSE
author:             Ugo Varetto
maintainer:         ugovaretto@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable ex1
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.18.0.0
                      , hspec
                      , QuickCheck
    hs-source-dirs:   app
    default-language: Haskell2010
